# BIRD-Interact

mini_interact/knowledge_based/mini_interact_agent/: pyproject.toml  run_batch_mini_interact_experiments.sh
mini_interact/knowledge_based/mini_interact_agent/src/llm_utils/: call_api_batch.py
